<resources>
    <string name="app_name">Front</string>
    <string name="app_version">0.1.0</string>
    <string name="app_update_date">2020.11.09</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="noJoinYet">아직 계정이 없으신가요?</string>
    <string name="login">Login</string>
    <string name="lostPassword">비밀번호를 잊으셨나요?</string>
    <string name="userName">UserName</string>
    <string name="join">Join</string>
    <string name="alreadyJoin">이미 가입을 하셨나요?</string>
    <string name="calendar">캘린더</string>
    <string name="subscribe">구독</string>
    <string name="ticket">둘러보기</string>
    <string name="user">설정</string>
    <string name="contact_email">jsg2804@gmail.com</string>
    <string name="eventEmpty">등록된 event가 없습니다.</string>
    <string name="eventSelect">등록할 event 종류를 선택하세요.</string>
    <string name="ticketing">티켓팅</string>
    <string name="watchShow">공연 관람</string>
    <string name="server_client_id">1091974344774-oc344g1aj0rgibg15vkq8h72v2g44rsd.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>