<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventSelect"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorFastWithUs1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorFastWithUs1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/ticketingBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_with_stroke"
        android:text="@string/ticketing"
        android:textColor="@color/colorFastWithUs3"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"/>
    <Button
        android:id="@+id/watchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_with_stroke"
        android:text="@string/watchShow"
        android:textColor="@color/colorFastWithUs3"
        android:textStyle="bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>