<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joinUserEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/userName"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joinIDEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joinPWEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/joinBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/join"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_pinktored"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:onClick="onJoinBtnClicked"/>
    </LinearLayout>

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F28379"
        android:text="Welcome"
        android:textSize="50sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>